kubernetes/apps/flux-system/flux/github/webhooks/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.home.arpa/enabled: "true"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - "flux-webhook.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
